--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "description": "My api para mi portafolio",
   "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/app.js"
+    "start": "node dist/.",
+    "dev": "ts-node-dev src/."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-discord": "^0.1.4",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.7",
+    "@types/passport": "^1.0.12",
+    "@types/passport-discord": "^0.1.6",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
 }
