--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-api",
   "version": "1.1.6",
-  "description": "My api para mi portafolio",
-  "main": "dist/app.js",
+  "description": "My api para mis proyectos",
+  "main": "dist/index.js",
   "scripts": {
     "start": "node dist/.",
     "dev": "ts-node-dev src/."
@@ -22,8 +22,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   }
 }
