--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,8 @@
         "sourceType": "module"
     },
     "rules": {
+        "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
