--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-api",
-  "version": "2.5.7",
+  "version": "2.5.8",
   "description": "My api para mis proyectos",
   "main": "dist/index.js",
   "scripts": {
@@ -11,9 +11,8 @@
   "author": "dagamdev",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
     "cors": "^2.8.5",
-    "discord.js": "^14.8.0",
+    "discord.js": "14.8.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
